--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main{
   top: 0;
   width: 100%;
   height: var(--height-background);
-  background: url('/images/bg-pattern-card.svg') no-repeat center;
+  background: url('./images/bg-pattern-card.svg') no-repeat center;
   background-size: auto;
   background-size: cover;
   z-index: -1;
