[FIX]: add h1 and style for hidden

--- a/style.css
+++ b/style.css
@@ -28,6 +28,15 @@
   padding: 0;
 }
 
+.sr-only {
+  position: absolute ;
+  left: -10000px;
+  width: 1px;
+  height: 1px;
+  top: auto;
+  overflow: hidden;
+}
+
 img {
   display: block;
   width: 100%;
